Updated Major things